--- a/App.config
+++ b/App.config
@@ -8,7 +8,7 @@
   <connectionStrings>
     <add name="ConStr"
          connectionString="Data source=.\SqlExpress;
-         Initial Catalog=PersonasDb;Integrated security=True"
+         Initial Catalog=ProjectoDb;Integrated security=True"
          providerName="System.data.sqlClient"/>
   </connectionStrings>
   
