--- a/Projecto-Aplicada1.csproj
+++ b/Projecto-Aplicada1.csproj
@@ -66,6 +66,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Consultas\cCargos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Consultas\cCargos.Designer.cs">
+      <DependentUpon>cCargos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Consultas\cUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Consultas\cUsuario.Designer.cs">
+      <DependentUpon>cUsuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Registros\rCargos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -91,6 +103,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UI\Consultas\cCargos.resx">
+      <DependentUpon>cCargos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Consultas\cUsuario.resx">
+      <DependentUpon>cUsuario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Registros\rCargos.resx">
       <DependentUpon>rCargos.cs</DependentUpon>
     </EmbeddedResource>
@@ -111,9 +129,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UI\Consultas\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Resources\delete-16.png" />
   </ItemGroup>
@@ -127,7 +143,7 @@
     <None Include="Resources\search-13-16.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="DAL\Script\UsuariosDb.sql" />
+    <Content Include="DAL\Script\projectoDb.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
